# southside-guitars-db

./: .gitignore  CLAUDE.md  DISCOVERIES.md  STATE.md  TECHNICAL_SPEC.md  db.py  pyproject.toml  q2_extract.py  requirements.txt  schema.py
docs/: DISCOVERIES.md  connection_setup.md  session_04_2026-04-26.md  session_05_2026-05-01.md  tools.md
docs/sessions/: 2026-05-01-q2-extract-expansion.md
src/southside_guitars_db/: config.py
tools/: explore_sale_items.py
